crates/test-files/fixtures/compile_errors/module_const_call.fe
const FOO: u8 = 1

contract C {
    fn f() {
        FOO()
    }
}
